# feedback-rust

./: Cargo.toml
migrations/2022-04-20-081611_Feed/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
